--- a/robot.vcxproj.filters
+++ b/robot.vcxproj.filters
@@ -17,5 +17,9 @@
   <ItemGroup>
     <None Include="robot.ino" />
   </ItemGroup>
- 
+  <ItemGroup>
+    <ClInclude Include="__vm\.robot.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
